# android-ai-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  proeject-assignment.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/accessibility/: __init__.py  announcer.py  haptics.py  manager.py  talkback.py
app/agent/: __init__.py  prompts.py  react_loop.py  state.py
app/agent/actions/: __init__.py  handler.py  launch_app.py  swipe.py  system.py  tap.py  type_text.py
app/api/: __init__.py  websocket.py
app/api/routes/: __init__.py  agent.py  health.py  sessions.py
app/device/: __init__.py  adb_device.py  aws_device_farm.py  browserstack.py  cloud_provider.py  limrun_client.py  screenshot.py
app/llm/: __init__.py  client.py  groq_client.py  key_rotator.py  models.py  response_parser.py
app/perception/: __init__.py  app_context.py  auth_detector.py  element_detector.py  ocr.py  ui_parser.py
app/utils/: __init__.py  logger.py  security.py
scripts/: run_demo.py  setup_cloud_device.py
tests/: __init__.py  conftest.py  test_accessibility.py  test_actions.py  test_agent.py  test_api.py  test_groq_client.py  test_key_rotator.py  test_llm_models.py  test_perception.py  test_security.py
